# advent-of-code-templates

./: .gitignore  README.MD
src/: data.txt
src/bash/: script.sh
src/cplusplus/: CMakeLists.txt  main.cpp
src/dart/: pubspec.yaml
src/elixir/aoc/: .gitignore
src/elixir/aoc/lib/: aoc.ex
src/javascript/: index.js
src/perl/: script.pl
src/python/: main.py  pyproject.toml
src/r/: main.R
src/scala/: .gitignore
src/scala/src/main/scala/: main.scala
src/typescript/: main.ts
src/visual-basic/: .gitignore
src/visual-basic/aoc-template/: aoc-template.sln
src/visual-basic/aoc-template/aoc-template/: Program.vb  aoc-template.vbproj
