[tool.poetry]
name = "aoc-python-template"
version = "0.1.0"
description = ""
authors = ["ThomasBoom89 <51998416+ThomasBoom89@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
